feat: integrate JPA, add booking feature and item comments